large screen navbar

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <!-- Css -->
     <link rel="stylesheet" href="assets/styleSheet/style.css">
+    <link rel="stylesheet" href="assets/styleSheet/common.css">
     <link rel="stylesheet" href="assets/Media/common-media.css">
     <link rel="stylesheet" href="assets/Media/home-media.css">
 
@@ -38,10 +39,11 @@
     <div class="container">
 
         <!-- navbar -->
-        <nav id="navbar" class="d-none d-md-block">
+        <!-- <nav id="navbar" class="large-navbar active  transition d-none d-md-block"> -->
+        <nav id="navbar" class="large-navbar transition d-none d-md-block">
             <div class="container">
 
-                <div class="row align-items-center py-4">
+                <div class="row align-items-center transition">
 
                     <div class="col">
                         <div class="nav-logo">
@@ -63,7 +65,7 @@
                     </div>
 
                     <div class="col text-end">
-                        <a href="#" class="nav-btn">
+                        <a href="#Contact" class="nav-btn">
                             Hire Me
                             <i class="ri-shake-hands-line"></i>
                         </a>
@@ -179,7 +181,10 @@
             </div>
 
         </nav>
+
+        <!-- Space from top -->
         <div class="spacing transition"></div>
+
         <!-- Hero Section -->
         <section id="heroSection" class=" hero-alignments">
             <div class="row row-gap-4">
