--- a/index.html
+++ b/index.html
@@ -205,6 +205,30 @@
                                 <div class="hero-name text-center text-sm-start text-lg-center">
                                     <h1>Farzad Khan</h1>
                                     <p>I am a Front-end Web Developer based in Pakistan.</p>
+
+                                    <ul
+                                        class="d-flex align-items-center justify-content-center justify-content-sm-start justify-content-lg-center gap-3 mt-2">
+                                        <li>
+                                            <a href="https://wa.me/+923158412564" target="_blank">
+                                                <i class="ri-whatsapp-line"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.instagram.com/its_farzadkhanx/" target="_blank">
+                                                <i class="ri-instagram-line"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://www.facebook.com/rehan.tabassum.39" target="_blank">
+                                                <i class="ri-facebook-circle-line"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="https://github.com/farzadkhan01" target="_blank">
+                                                <i class="ri-github-fill"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
                                 </div>
 
                             </div>
