about Hero completed

--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
                         <div class="nav-pages">
                             <ul class="d-flex align-items-center gap-3 gap-lg-4">
                                 <li><a href="#">Home</a></li>
-                                <li><a href="#">About</a></li>
+                                <li><a href="assets/pages/about.html">About</a></li>
                                 <li><a href="#">Services</a></li>
-                                <li><a href="#">Works</a></li>
-                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Projects</a></li>
                                 <li><a href="#">Contact</a></li>
                             </ul>
                         </div>
@@ -113,7 +112,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="assets/pages/about.html">
                                 <h4>About</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
@@ -158,13 +157,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <h4>Work</h4>
-                                <i class="ri-arrow-right-s-line"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <h4>Blog</h4>
+                                <h4>Projects</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </li>
@@ -258,10 +251,10 @@
                                         <span>
                                             <i class="ri-circle-fill"></i>
                                         </span>
-                                        Available for Freelancing
+                                        Available for Hiring
                                     </p>
 
-                                    <a href="#">
+                                    <a class="cta-link" href="#">
                                         Download CV
                                         <i class="ri-download-fill"></i>
                                     </a>
@@ -432,7 +425,7 @@
             <div class="row row-gap-4">
 
                 <div class=" col-12 col-lg">
-                    <div class="experience-details section-card text-start">
+                    <div class="experience-details section-card text-start h-100">
                         <div class="info-title">
                             <h2>Experience</h2>
                         </div>
@@ -501,7 +494,7 @@
                 </div>
 
                 <div class=" col-12 col-lg">
-                    <div class="experience-details section-card text-start">
+                    <div class="experience-details section-card text-start h-100">
                         <div class="info-title">
                             <h2>Education</h2>
                         </div>
