--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Farzad's Portfolio</title>
+    <title>About · Portfolio</title>
     <link rel="shortcut icon" href="../Images/logo1.png" type="image/x-icon">
 
     <!-- RemixIcons -->
@@ -48,7 +48,7 @@
 
                     <div class="col">
                         <div class="nav-logo">
-                            <a href="#">Farzad Khan</a>
+                            <a href="../../index.html">Farzad Khan</a>
                         </div>
                     </div>
 
@@ -56,8 +56,8 @@
                         <div class="nav-pages">
                             <ul class="d-flex align-items-center gap-3 gap-lg-4">
                                 <li><a href="../../index.html">Home</a></li>
-                                <li><a href="assets/pages/about.html">About</a></li>
-                                <li><a href="#">Services</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="service.html">Services</a></li>
                                 <li><a href="#">Projects</a></li>
                                 <li><a href="#">Contact</a></li>
                             </ul>
@@ -70,10 +70,9 @@
                             <i class="ri-shake-hands-line"></i>
                         </a>
                     </div>
+
                 </div>
-
             </div>
-
         </nav>
 
         <!-- navbar -->
@@ -85,7 +84,7 @@
 
                     <div class="col transition">
                         <div class="nav-logo">
-                            <a href="#">Farzad Khan</a>
+                            <a href="../../index.html">Farzad Khan</a>
                         </div>
                     </div>
 
@@ -107,19 +106,19 @@
 
                     <ul>
                         <li>
-                            <a href="#">
+                            <a href="../../index.html">
                                 <h4>Home</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="assets/pages/about.html">
+                            <a href="about.html">
                                 <h4>About</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
                         </li>
                         <li class="sub-dropdown">
-                            <a href="#">
+                            <a href="service.html">
                                 <h4>Services</h4>
                                 <!-- <i class="ri-arrow-down-s-line dropdown-icon-small active"></i> -->
                                 <i class="ri-arrow-down-s-line transition dropdown-icon-small"></i>
@@ -157,7 +156,7 @@
 
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="">
                                 <h4>Projects</h4>
                                 <i class="ri-arrow-right-s-line"></i>
                             </a>
@@ -298,7 +297,155 @@
 
         </section>
 
+        <!-- Specialized experties in detail -->
+        <div id="front-end"></div>
+        <section id="Specialization" class="section-card ">
+            <div class="section-title">
+                <!-- <h5>Services</h5> -->
+                <p>Frontend Development</p>
+                <h2>High-Performance Architecture</h2>
+            </div>
 
+            <div class="specialize-cards text-start">
+                <div class="row row-gap-4">
+
+                    <div class="col-12 col-md text-center text-md-start ">
+                        <div class="experties-card card-1">
+                            <i class="ri-code-s-slash-line"></i>
+                            <h3>Component-Driven Development</h3>
+                            <p>
+                                I build modular, reusable UI systems that ensure brand consistency and reduce
+                                development time across large-scale applications.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md text-center text-md-start">
+                        <div class="experties-card card-1">
+                            <i class="ri-code-s-slash-line"></i>
+                            <h3>Performance Optimization</h3>
+                            <p>
+                                My focus is on Core Web Vitals—minimizing layout shifts and optimizing asset delivery to
+                                ensure lightning-fast interaction speeds.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col text-center text-lg-start">
+                        <div class="experties-card card-1">
+                            <i class="ri-code-s-slash-line"></i>
+                            <h3>Pixel-Perfect Precision</h3>
+                            <p>
+                                I treat design files as a blueprint, translating complex layouts into code with 100%
+                                accuracy in spacing, typography, and responsive behavior.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Specialized experties in detail -->
+        <div id="UI"></div>
+        <section id="Specialization" class="section-card my-5">
+            <div class="section-title">
+                <!-- <h5>Services</h5> -->
+                <p>UI/UX Engineering</p>
+                <h2>Intuitive User Journeys</h2>
+            </div>
+
+            <div class="specialize-cards text-start">
+                <div class="row row-gap-4">
+
+                    <div class="col-12 col-md text-center text-md-start ">
+                        <div class="experties-card card-1">
+                            <i class="ri-flow-chart"></i>
+                            <h3>Frictionless Navigation</h3>
+                            <p>
+                                I bridge the gap between aesthetics and logic by engineering paths that guide users
+                                naturally toward their goals, increasing conversion and retention.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md text-center text-md-start">
+                        <div class="experties-card card-1">
+                            <i class="ri-flow-chart"></i>
+                            <h3>Micro-Interactions</h3>
+                            <p>
+                                I use subtle, purposeful animations to provide instant haptic feedback, making digital
+                                interfaces feel tactile and responsive to user input.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col text-center text-lg-start">
+                        <div class="experties-card card-1">
+                            <i class="ri-flow-chart"></i>
+                            <h3>Accessibility First</h3>
+                            <p>
+                                Every interface is built with inclusion in mind, ensuring full keyboard navigability and
+                                screen-reader compatibility for a diverse user base.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Specialized experties in detail -->
+        <div id="solutions"></div>
+        <section id="Specialization" class="section-card my-5">
+            <div class="section-title">
+                <!-- <h5>Services</h5> -->
+                <p>Scalable Solutions</p>
+                <h2>Future-Proof Engineering</h2>
+            </div>
+
+            <div class="specialize-cards text-start">
+                <div class="row row-gap-4">
+
+                    <div class="col-12 col-md text-center text-md-start ">
+                        <div class="experties-card card-1">
+                            <i class="ri-flashlight-line"></i>
+                            <h3>Clean Code Standards</h3>
+                            <p>
+                                Using industry-best practices, I write maintainable, self-documenting code that allows
+                                for seamless feature expansion without technical debt.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md text-center text-md-start">
+                        <div class="experties-card card-1">
+                            <i class="ri-flashlight-line"></i>
+                            <h3>Data-Heavy Dashboards</h3>
+                            <p>
+                                I specialize in managing complex states and real-time data flow for B2B systems, such as
+                                healthcare platforms and pharmaceutical management tools.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col text-center text-lg-start">
+                        <div class="experties-card card-1">
+                            <i class="ri-flashlight-line"></i>
+                            <h3>Robust Integration</h3>
+                            <p>
+                                I develop frontend layers that communicate efficiently with RESTful APIs, ensuring data
+                                integrity and security across the entire application lifecycle.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
 
 
 
