--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <ul class="d-flex align-items-center gap-3 gap-lg-4">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="assets/pages/about.html">About</a></li>
-                                <li><a href="#">Services</a></li>
+                                <li><a href="assets/pages/service.html">Services</a></li>
                                 <li><a href="#">Projects</a></li>
                                 <li><a href="#">Contact</a></li>
                             </ul>
@@ -118,7 +118,7 @@
                             </a>
                         </li>
                         <li class="sub-dropdown">
-                            <a href="#">
+                            <a href="assets/pages/service.html">
                                 <h4>Services</h4>
                                 <!-- <i class="ri-arrow-down-s-line dropdown-icon-small active"></i> -->
                                 <i class="ri-arrow-down-s-line transition dropdown-icon-small"></i>
@@ -390,6 +390,7 @@
                                 Translating complex designs into interactive, high-performance web interfaces with a
                                 focus on responsiveness and pixel-perfect accuracy.
                             </p>
+                            <a href="assets/pages/about.html#front-end" class="cta-link">Read More</a>
                         </div>
                     </div>
 
@@ -401,6 +402,7 @@
                                 Bridging the gap between aesthetics and functionality to create intuitive user journeys
                                 that drive engagement and solve real-world problems.
                             </p>
+                            <a href="assets/pages/about.html#UI" class="cta-link">Read More</a>
                         </div>
                     </div>
 
@@ -412,6 +414,7 @@
                                 Developing data-driven applications—like your Pharma systems—with clean, maintainable
                                 code optimized for speed and long-term scalability.
                             </p>
+                            <a href="assets/pages/about.html#solutions" class="cta-link">Read More</a>
                         </div>
                     </div>
 
