--- a/assets/pages/service.html
+++ b/assets/pages/service.html
@@ -214,14 +214,208 @@
         </section>
 
         <!-- Services in detail -->
+        <section id="detailedServices">
+            <div class="servives-info">
 
+                <div class="section-title text-center">
+                    <!-- <h5>Services</h5> -->
+                    <h2 class="mb-3 text-uppercase">Engineering Premium Digital Experiences</h2>
+                    <p>
+                        Go beyond the surface. Explore the technical depth and strategic thinking I bring to every
+                        project, from architecture to final polish.
+                    </p>
+                </div>
 
+                <!-- parts -->
+                <div class="services-content my-5 row-gap-4">
+                    <div class="row">
 
+                        <div class="col-lg-6 mb-4 mb-lg-0">
 
+                            <div class="service-card card1 section-card text-start ">
+                                <h2>Frontend Development</h2>
+                                <p>
+                                    I don't just "make websites." I build complex frontend architectures that are
+                                    modular and easy to scale. Whether it's a SaaS dashboard or a high-traffic
+                                    e-commerce site, the focus is on state management, security, and performance.
+                                </p>
 
+                                <h3>Key Focus Areas</h3>
+                                <ul>
 
+                                    <li>
+                                        <p>
+                                            <span>Component-Driven Development: </span>
+                                            Using Storybook or Atomic Design principles for reusable UI.
+                                        </p>
+                                    </li>
 
+                                    <li>
+                                        <p>
+                                            <span>State Management: </span>
+                                            Expert implementation of Redux Toolkit, Zustand, or React Query.
+                                        </p>
+                                    </li>
 
+                                    <li>
+                                        <p>
+                                            <span>API Integration: </span>
+                                            Seamlessly connecting your frontend to RESTful or GraphQL services.
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="d-none d-lg-block service-card card1 section-card text-start mt-4">
+                                <h2>UI/UX Implementation</h2>
+                                <p>
+                                    A beautiful design is useless if it’s frustrating to use. I specialize in "Design
+                                    Engineering"—ensuring that every micro-interaction, transition, and hover state
+                                    feels natural and guides the user toward a conversion.
+                                </p>
+
+                                <h3>Key Focus Areas</h3>
+                                <ul>
+
+                                    <li>
+                                        <p>
+                                            <span>Responsive Excellence: </span>
+                                            Perfect layouts across mobile, tablet, and ultra-wide monitors.
+                                        </p>
+                                    </li>
+
+                                    <li>
+                                        <p>
+                                            <span>Accessibility: </span>
+                                            Ensuring your site is usable by everyone, following WCAG standards.
+                                        </p>
+                                    </li>
+
+                                    <li>
+                                        <p>
+                                            <span>Motion Design: </span>
+                                            Subtle Framer Motion or GSAP animations that add a "premium" feel without
+                                            slowing down the site.
+                                        </p>
+                                    </li>
+
+                                    <li>
+                                        <p>
+                                            <span>Deliverables: </span>
+                                            Interactive prototypes, mobile-first layouts, and cross-browser
+                                            compatibility.
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
+
+                        </div>
+
+                        <div class="col-lg-6">
+                            <div class="section-card h-100">
+
+                                <div class="service-img h-100">
+                                    <img src="../Images/Focused on code and detail.png" alt="">
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="col-12 d-lg-none">
+
+                            <div class="service-card card1 section-card text-start mt-4">
+                                <h2>UI/UX Implementation</h2>
+                                <p>
+                                    A beautiful design is useless if it’s frustrating to use. I specialize in "Design
+                                    Engineering"—ensuring that every micro-interaction, transition, and hover state
+                                    feels natural and guides the user toward a conversion.
+                                </p>
+
+                                <h3>Key Focus Areas</h3>
+                                <ul>
+
+                                    <li>
+                                        <p>
+                                            <span>Responsive Excellence: </span>
+                                            Perfect layouts across mobile, tablet, and ultra-wide monitors.
+                                        </p>
+                                    </li>
+
+                                    <li>
+                                        <p>
+                                            <span>Accessibility: </span>
+                                            Ensuring your site is usable by everyone, following WCAG standards.
+                                        </p>
+                                    </li>
+
+                                    <li>
+                                        <p>
+                                            <span>Motion Design: </span>
+                                            Subtle Framer Motion or GSAP animations that add a "premium" feel without
+                                            slowing down the site.
+                                        </p>
+                                    </li>
+
+                                    <li>
+                                        <p>
+                                            <span>Deliverables: </span>
+                                            Interactive prototypes, mobile-first layouts, and cross-browser
+                                            compatibility.
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 mt-4">
+                            <div class="section-card h-100">
+                                <div class="service-img separate-img ">
+                                    <img src="../Images/project/weather pc.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-6 mt-4">
+                            <div class="service-card card1 h-100 section-card text-start ">
+                                <h2>Technical Consulting & Optimization</h2>
+                                <p>
+                                    Sometimes you don’t need a new site; you need your current one to work better. I
+                                    analyze your existing codebase to identify bottlenecks, security risks, and
+                                    technical debt that might be holding your business back.
+                                </p>
+
+                                <h3>Key Focus Areas</h3>
+                                <ul>
+
+                                    <li>
+                                        <p>
+                                            <span>Code Audits: </span>
+                                            In-depth review of your JavaScript patterns.
+                                        </p>
+                                    </li>
+
+                                    <li>
+                                        <p>
+                                            <span>Conversion Rate Optimization: </span>
+                                            Analyzing user flow to suggest UI changes that increase sales or sign-ups.
+                                        </p>
+                                    </li>
+
+                                    <li>
+                                        <p>
+                                            <span>Deliverables: </span>
+                                            Comprehensive audit report, refactored code modules, and performance
+                                            benchmarks.
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
