services page completed

--- a/assets/pages/service.html
+++ b/assets/pages/service.html
@@ -214,7 +214,7 @@
         </section>
 
         <!-- Services in detail -->
-        <section id="detailedServices">
+        <section id="detailedServices" class="mt-5 pt-5">
             <div class="servives-info">
 
                 <div class="section-title text-center">
@@ -417,34 +417,63 @@
             </div>
         </section>
 
+        <!-- steps -->
+        <section id="steps" class="mt-5 pt-5">
+            <div class="section-title text-center">
+                <p class="mb-0">From Idea to Implementation</p>
+                <h2 class="mb-3 text-uppercase">My Workflow</h2>
+            </div>
+
+            <div class="steps-details">
+                <div class="row row-gap-4">
+
+                    <div class="col-md-6 col-lg-4">
+                        <div class="section-card text-md-start h-100">
+                            <div class="steps step1">
+                                <i class="ri-search-line"></i>
+                                <h3>Discovery</h3>
+                                <p>
+                                    We start with a deep dive into your project requirements, target audience, and
+                                    business goals to ensure the technical strategy aligns with your vision.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-lg-4">
+                        <div class="section-card text-md-start h-100">
+                            <div class="steps step1">
+                                <i class="ri-git-repository-commits-line"></i>
+                                <h3>Execution</h3>
+                                <p>
+                                    Using the high-performance standards we discussed, I build your solution with clean,
+                                    modular code and regular updates to keep you in the loop.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-lg-4">
+                        <div class="section-card  text-lg-start h-100">
+                            <div class="steps step1">
+                                <i class="ri-rocket-2-line"></i>
+                                <h3>Delivery</h3>
+                                <p>
+                                    A final polish, rigorous performance testing, and deployment. I ensure your project
+                                    is live, optimized, and ready to scale.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        </section>
 
         <!-- CTA -->
-        <section id="CTA" class="section-card mb-5">
+        <section id="CTA" class="section-card  my-5">
             <div class="cta-content">
 
                 <h1 class=" text-uppercase text-center fw-bolder">
